Fixed scroll bug with z-index and increased the height on mobile

--- a/styles/ValentineCard.css
+++ b/styles/ValentineCard.css
@@ -1,4 +1,4 @@
-.container::before{
+/* .container::before{
   content: "";
   position: absolute;
   width: 330px;
@@ -7,7 +7,7 @@
   background-color: rgba(0, 0, 0, 0.3);
   top: 265px;
   animation: scale 3s ease-in-out infinite;
-}
+} */
 .envelope-container {
   width: 300px;
   height: 200px;
@@ -28,7 +28,7 @@
 
 @media (max-width: 700px) {
   .envelope-container {
-    width: 280px;
+    width: 200px;
     height: 195px;
   }
 
@@ -38,14 +38,24 @@
   }
 
   .envelope-container::before {
-    width: 210px;
-    height: 210px;
-    top: -104px;
+    width: 140px;
+    height: 140px;
+    top: -70px;
   }
 
-  .envelope-container.open .letter {
-    transform: translateY(-100px) translateZ(50px) scaleX(1.15) scaleY(1.7) !important;
+  .envelope::before {
+    border-left: 200px solid hsl(348.1578947368421, 79.16666666666671%, 81.17647058823529%) !important;
+    border-top: 185px solid transparent !important;
   }
+  
+  .envelope::after {
+    border-left: 200px solid hsl(348.1578947368421, 79.16666666666671%, 81.17647058823529%) !important;
+    border-top: 185px solid transparent !important;
+  } 
+
+  /* .envelope-container.open .letter {
+    transform: translateY(-100px) translateZ(50px) scaleX(1.3) scaleY(1.9) !important;
+  } */
 }
 
 .envelope-container:not(.open) {
@@ -76,13 +86,13 @@
   position: absolute;
   border-left: 300px solid hsl(348.1578947368421, 79.16666666666671%, 81.17647058823529%);
   border-top: 195px solid transparent;
-  z-index: 1;
+  z-index: 0;
   -moz-transform:    scaleX(-1); /* Gecko */
   -o-transform:      scaleX(-1); /* Opera */
   -webkit-transform: scaleX(-1); /* Webkit */
   transform:         scaleX(-1); /* Standard */
   filter: FlipH;                 /* IE 6/7/8 */
-}
+} 
 
 .envelope-container.open .envelope {
   transform: rotateX(0deg);
@@ -105,23 +115,24 @@
   max-height: calc(100vh - 40px);
 }
 
-/* .letter::-webkit-scrollbar-track {
+.letter::-webkit-scrollbar-track {
   background-color: #ff9c9ca3;
 }
 
 .letter::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
   background-color: #fff5f5;
 }
 
 .letter::-webkit-scrollbar-thumb {
-  border-radius: 10px;
+  border-radius: 20px;
   background-color: #fd6a6a;
-} */
+}
 
 .envelope-container.open .letter {
   transform: translateY(-100px) translateZ(50px) scaleX(2) scaleY(2.2);
   height: auto;
+  z-index: 4;
 }
 
 .heartCard {
@@ -162,6 +173,7 @@
 .full-message.visible {
   opacity: 1;
   max-height: auto;
+  overflow: visible;
 }
 
 .letter-content {
